--- a/platle/app/globals.css
+++ b/platle/app/globals.css
@@ -79,6 +79,28 @@
   color: var(--color-text-info);
   transition: background 0.3s;
 }
+
+.InfoEntry.correct{
+  border-width: 2;
+  background: linear-gradient(90deg,#23242b 0%, #242427 35%, #2f3035 100%);
+  border-color: #57C785;
+  border-color: radial-gradient(circle,rgba(87, 199, 133, 1) 0%, rgba(51, 255, 136, 1) 52%, rgba(87, 199, 133, 1) 100%);
+
+}
+.InfoEntry.close{
+  border-width: 2;
+  background: linear-gradient(90deg,#23242b 0%, #242427 35%, #2f3035 100%);
+  border-color: #c7bc57;
+  border-color: radial-gradient(circle,rgba(87, 199, 133, 1) 0%, rgba(51, 255, 136, 1) 52%, rgba(87, 199, 133, 1) 100%);
+
+}
+.InfoEntry.wrong{
+  border-width: 2;
+  background: linear-gradient(90deg,#23242b 0%, #242427 35%, #2f3035 100%);
+  border-color: #c75757;
+  border-color: radial-gradient(circle,rgba(87, 199, 133, 1) 0%, rgba(51, 255, 136, 1) 52%, rgba(87, 199, 133, 1) 100%);
+}
+
 .InfoEntry:hover {
   background: var(--color-bg-info-hover);
 }
